<?xml version="1.0" encoding="UTF-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <FrameLayout
        android:id="@+id/frameLoginScreen"
        style="@style/groupStylewhite_A700"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameStacklogoOne"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_419pxv"
            android:layout_gravity="top|center">

            <ImageView
                android:id="@+id/imageLogoOne"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_419pxh"
                android:layout_gravity="center"
                android:alpha="0.05"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                android:src="@drawable/img_logo" />

            <ImageView
                android:id="@+id/imageLogoThree"
                android:layout_width="@dimen/_135pxh"
                android:layout_height="@dimen/_133pxh"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="@dimen/_81pxh"
                android:scaleType="fitXY"
                tools:ignore="ContentDescription"
                android:src="@drawable/img_logo" />
        </FrameLayout>

        <LinearLayout
            android:id="@+id/linearColumnusername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginStart="@dimen/_44pxh"
            android:layout_marginEnd="@dimen/_44pxh"
            android:layout_marginBottom="@dimen/_35pxv"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                style="@style/etSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_900_radius_8"
                android:drawableEnd="@drawable/img_userimage"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_username"
                android:inputType="text"
                android:paddingStart="@dimen/_26pxh"
                android:paddingTop="@dimen/_15pxv"
                android:paddingEnd="@dimen/_14pxh"
                android:paddingBottom="@dimen/_15pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_800"
                tools:ignore="Autofill" />

            <EditText
                android:id="@+id/password"
                style="@style/etSolidRoundedOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_17pxv"
                android:background="@drawable/rectangle_bg_white_a700_border_blue_gray_900_radius_8"
                android:drawableEnd="@drawable/img_search"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl"
                android:inputType="text"
                android:paddingStart="@dimen/_24pxh"
                android:paddingTop="@dimen/_10pxv"
                android:paddingEnd="@dimen/_15pxh"
                android:paddingBottom="@dimen/_10pxv"
                android:singleLine="true"
                android:textColorHint="@color/gray_800"
                tools:ignore="Autofill" />


            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="64dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/password"
                app:layout_constraintStart_toStartOf="@+id/password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnLogin"
                style="@style/btnSolidRoundedOutline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_37pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:letterSpacing="0.02"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_11pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_11pxv"
                android:singleLine="true"
                android:text="@string/lbl_login"
                android:textAllCaps="false"
                tools:text="@string/lbl_login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnRegister"
                style="@style/btnSolidRoundedOutline_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15pxv"
                android:ellipsize="end"
                android:gravity="center"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_9pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingBottom="@dimen/_9pxv"
                android:singleLine="true"
                android:text="Register"
                android:textAllCaps="false"
                tools:text="Register" />
        </LinearLayout>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>